--- a/web/views/_createEventCard.haml
+++ b/web/views/_createEventCard.haml
@@ -1,10 +1,10 @@
 .col-md-3
   .panel.panel-primary
-    .panel-heading
-      %h3 Create New Flock
+    /.panel-heading
     .panel-body
+      %h3 Create New Flock
       %p Some Description
       %div When: @ Some good time
       %div Where: @ Some good place
     .panel-footer
-      %button#createevent.btn.btn-success.btn-lg{:style => "width:100%", "data-target" => "#createeventmodal", "data-toggle" => "modal" , :"data-bind" => "click : createevent"} Create Flock
+      %button#createevent.btn.btn-primary{:style => "width:100%", "data-target" => "#createeventmodal", "data-toggle" => "modal" , :"data-bind" => "click : createevent"} Create Flock
