--- a/web/views/_eventdetails.haml
+++ b/web/views/_eventdetails.haml
@@ -2,3 +2,6 @@
 %p{:"data-bind" => "text: detailedEvent().description()"}
 %div{:"data-bind" => "text: 'When: ' + detailedEvent().date()"}
 %div{:"data-bind" => "text: 'Where: ' + detailedEvent().place()"}
+%p{:"data-bind" => "text: 'Fees: ' + detailedEvent().fees()"}
+%p{:"data-bind" => "text: 'Prize: ' + detailedEvent().prize()"}
+%p{:"data-bind" => "text: 'Timings: ' + detailedEvent().time()"}
