--- a/web/views/profile.haml
+++ b/web/views/profile.haml
@@ -9,7 +9,7 @@
     %link{:href => "../assets/css/navbar-fixed-top.css", :rel => "stylesheet"}
     %link{:href => "../assets/css/style.css", :rel => "stylesheet", :type => "text/css"}
     %script{:src => "../assets/js/jquery.min.js"}
-    %script{:src => "../assets/js/jquery.wheelmenu.js", :type => "text/javascript"}
+    /%script{:src => "../assets/js/jquery.wheelmenu.js", :type => "text/javascript"}
   %body.main
     =haml_partial "topBar"
     .container
@@ -73,7 +73,7 @@
                   =haml_partial "eventCard"
                 =haml_partial "createEventCard"
 
-        .row{:'data-bind' => 'visible : searchedEvents().length'}
+        .row
           %span.label.label-success
             Flock Details
           %div.panel.panel-success
