visibility of create event form and details form controlled

--- a/web/views/_createEventCard.haml
+++ b/web/views/_createEventCard.haml
@@ -7,4 +7,4 @@
       %div When: @ Some good time
       %div Where: @ Some good place
     .panel-footer
-      %button#createevent.btn.btn-primary{:style => "width:100%", "data-target" => "#createeventmodal", "data-toggle" => "modal" , :"data-bind" => "click : createevent"} Create Flock
+      %button#createevent.btn.btn-primary{:style => "width:100%",:"data-bind" => "click : createEvent"} Create Flock
