--- a/web/views/_eventdetails.haml
+++ b/web/views/_eventdetails.haml
@@ -3,5 +3,5 @@
 %div{:"data-bind" => "text: 'When: ' + detailedEvent().date()"}
 %div{:"data-bind" => "text: 'Where: ' + detailedEvent().place()"}
 %p{:"data-bind" => "text: 'Fees: ' + detailedEvent().fees()"}
-%p{:"data-bind" => "text: 'Prize: ' + detailedEvent().prize()"}
+%p{:"data-bind" => "text: 'Prize: Rs.' + detailedEvent().prize()"}
 %p{:"data-bind" => "text: 'Timings: ' + detailedEvent().time()"}
