user events shown

--- a/web/views/_eventCard.haml
+++ b/web/views/_eventCard.haml
@@ -11,6 +11,6 @@
       /%p{:"data-bind" => "text: time()"}
     .panel-footer
       %button#option.btn.btn-primary{:style => "width:40%", 'data-bind' =>'click: details'} Details
-      %button#option.btn.btn-primary{:style => "width:58%", 'data-bind' =>'click: participate'} Participate
+      /%button#option.btn.btn-primary{:style => "width:58%", 'data-bind' =>'click: participate'} Participate
       /%button#delete.btn.btn-primary{:"data-bind" => "click : DeleteEvent"}Delete Me
       /%button#deleteParticipation.btn-primary{:"data-bind" => "click : deleteParticipateEvent"}Delete Me
