user events now displayed properly

--- a/web/views/_participatedEventCard.haml
+++ b/web/views/_participatedEventCard.haml
@@ -11,4 +11,4 @@
       /%p{:"data-bind" => "text: time()"}
     .panel-footer
       %button#option.btn.btn-primary{:style => "width:40%", 'data-bind' =>'click: details'} Details
-      %button#deleteParticipation.btn-primary{:"data-bind" => "click : deleteParticipateEvent"}Delete Me
+      %button#deleteParticipation.btn.btn-primary{:"data-bind" => "click : deleteParticipateEvent"}Delete Me
