--- a/web/views/home.haml
+++ b/web/views/home.haml
@@ -12,6 +12,8 @@
         %p A site to reveal the FUN SIDE of you.
       %div#event
         .row
+          %input.hide{:id =>"current_user", :value => "#{@user}"}
+          %input.hide{:id =>"current_user_id", :value => "#{@userid}"}
           /%p.alert.alert-danger#InvalidUser{:style => 'visibility : hidden',:'data-bind' => 'text : message'}
           /%p.alert.alert-success#SuccessfulSignup{:style => 'visibility : hidden'}You have signed up successfully
         .row{:"data-bind" => "foreach: publicEvents"}
