--- a/web/views/_eventdetails.haml
+++ b/web/views/_eventdetails.haml
@@ -2,6 +2,7 @@
 %p{:"data-bind" => "text: detailedEvent().description()"}
 %div{:"data-bind" => "text: 'When: ' + detailedEvent().date()"}
 %div{:"data-bind" => "text: 'Where: ' + detailedEvent().place()"}
-%p{:"data-bind" => "text: 'Fees: ' + detailedEvent().fees()"}
-%p{:"data-bind" => "text: 'Prize: Rs.' + detailedEvent().prize()"}
-%p{:"data-bind" => "text: 'Timings: ' + detailedEvent().time()"}
+%br
+%div{:"data-bind" => "text: 'Fees: ' + detailedEvent().fees()"}
+%div{:"data-bind" => "text: 'Prize: Rs.' + detailedEvent().prize()"}
+%div{:"data-bind" => "text: 'Timings: ' + detailedEvent().time()"}
