--- a/web/views/_footer.haml
+++ b/web/views/_footer.haml
@@ -19,5 +19,5 @@
   %script{:src => "../assets/js/jquery.min.js"}
   //dropdown does not work, if i use this
   //%script{:src => "../assets/js/bootstrap.min.js"}
-  %script{:src => "../assets/js/error.js"}
+  /%script{:src => "../assets/js/error.js"}
 
