--- a/web/views/home.haml
+++ b/web/views/home.haml
@@ -1,7 +1,7 @@
 !!!
 %html{:lang => "en"}
   %head
-    %title Event Planner
+    %title Lets flock together
     %link{:href => "../assets/css/bootstrap.min.css", :rel => "stylesheet"}
     %link{:href => "../assets/css/navbar-fixed-top.css", :rel => "stylesheet"}
   %body.main
@@ -10,12 +10,14 @@
       .jumbotron.heading
         %h1 Flockers
         %p A site to reveal the FUN SIDE of you.
+        %p.alert.alert-info#sessionMsg{:'data-bind' => 'text: sessionMessage, visible: sessionMessage'}
+
       %div#event
         .row
           %input.hide{:id =>"current_user", :value => "#{@user}"}
           %input.hide{:id =>"current_user_id", :value => "#{@userid}"}
-          /%p.alert.alert-danger#InvalidUser{:style => 'visibility : hidden',:'data-bind' => 'text : message'}
-          /%p.alert.alert-success#SuccessfulSignup{:style => 'visibility : hidden'}You have signed up successfully
+          %p.alert.alert-info{:'data-bind' => 'text: message, visible: message'}
+
         .row{:"data-bind" => "foreach: publicEvents"}
           =haml_partial "publicEventCard"
         .row{:"data-bind"=>"visible : detailedState()"}
@@ -26,6 +28,7 @@
             /  %h4{:'data-bind' => 'text : selectedActivity'}
             %div.panel-body
               =haml_partial "eventdetails"
+
       #signInModal.modal.fade{"aria-hidden" => "true", "aris-labelledby" => "signInModal",:role => "dialog" ,:tabindex => "-1"}
         .modal-dialog
           .modal-content
@@ -33,7 +36,7 @@
               %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
               %h4.modal-title Sign In
             .modal-body
-              %form.form-horizontal{:role => "form"}                    
+              %form.form-horizontal{:role => "form"}
                 .form-group
                   %label.col-sm-4.control-label Username
                   .col-sm-6
@@ -53,6 +56,7 @@
                 .form-group
                   .col-sm-offset-4.col-sm-6
                     %button#show.btn.btn-large.btn-primary{:'data-dismiss' => "modal",:"data-bind" => "click : login"} Sign In              
+
       #signUpModal.modal.fade{"aria-hidden" => "true", "aris-labelledby" => "signUpModal",:role => "dialog" ,:tabindex => "-1"}
         .modal-dialog
           .modal-content
