--- a/web/views/profile.haml
+++ b/web/views/profile.haml
@@ -33,7 +33,7 @@
             %div.panel-body{:style => "text-align:center"}
               %div{:'data-bind' => 'foreach : verb'}
                 .col-sm-3.col-md-2
-                  .thumbnail
+                  .thumbnail{:style => 'background-color: black'}
                     .caption
                       %button.btn.btn-lg.btn-link{:'data-bind' => 'text : $data,click : function() { $root.getActivities($data);}'}
 
@@ -46,13 +46,13 @@
             %div.panel-body{:style => "text-align:center"}
               %div{:'data-bind'=>'foreach:activities'}
                 .col-sm-3.col-md-2
-                  .thumbnail
+                  .thumbnail{:style => 'background-color: black'}
                     /%i.fa.fa-camera-retro.fa-5x
                     /%img{alt: "...", "data-src" => "holder.js/300x200"}/
                     .caption
                       %button.btn-warning.btn.btn-link{:'data-bind'=>"click : function(){$root.searchEventByActivity($data);},text:$data", :style => "width:100%"}
               .col-sm-4.col-md-4
-                .thumbnail
+                .thumbnail{:style => 'background-color: black'}
                   /%i.fa.fa-camera-retro.fa-5x
                   /%img{alt: "...", "data-src" => "holder.js/300x200"}/
                   .caption
