--- a/web/views/_topBar.haml
+++ b/web/views/_topBar.haml
@@ -1,4 +1,4 @@
-%header.navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
+%header#header1.navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
   .container
     .navbar-header
       %a.navbar-brand{:href => "/"}=SiteConfig.title
