--- a/web/public/assets/css/jumbotron.css
+++ b/web/public/assets/css/jumbotron.css
@@ -3,6 +3,19 @@ body {
   padding-top: 50px;
   padding-bottom: 20px;
 }
+#profilepanel
+{
+	padding-top: 10px;
+}
+#profileview a
+{
+	color: inherit;
+}
+/*#leaderboard
+{
+	overflow: scroll;
+}*/
+/*
 .jumbotron.heading h1,
 .jumbotron .h1,
 .jumbotron.heading p
@@ -12,5 +25,5 @@ color: #fff;
 .jumbotron.heading{
   background: url('http://st.gdefon.com/wallpapers_original/wallpapers/336639_tekstura_fon_metallik_seryj_1920x1200_(www.GdeFon.ru).jpg');
   box-shadow: 10px 10px 10px #000;
-}
+}*/
 
