--- a/web/public/home.haml
+++ b/web/public/home.haml
@@ -3,9 +3,9 @@
   %head
     %title Lets flock together
     %link{:href => "../assets/css/bootstrap.min.css", :rel => "stylesheet"}
-    /%link{:href => "../assets/css/navbar-fixed-top.css", :rel => "stylesheet"}
   %body.main
-    =haml_partial "topBar"
+    %div#headercontent
+      =haml_partial "topBar"
     .container
       .jumbotron.heading
         %h1 Flockers
